# solana_naming_service

./: .gitignore  advanced-account-creation-summary.json  advanced-account-creation.js  create-new-account-and-send-sol.js  domain-registration-data.json  domain-registration-simulation.json  employee-metadata.json  gorb-name-service.js  push-to-github.sh
sns-registrar-master (10)/: DEPLOYMENT_CONFIG.md  PROGRAM_ID_UPDATE_SUMMARY.md  README.md  deploy-gorbchain.sh  gorbchain-client.js  gorbchain-config.json  test_deployment.js
sns-registrar-master (10)/program/: .gitignore  Anchor.toml  Cargo.toml  Dockerfile  METADATA_URL_IMPLEMENTATION.md  METADATA_URL_IMPLEMENTATION_SUMMARY.md  PROGRAM_ID_UPDATE_SUMMARY.md  README.md  advanced-account-creation-summary.json  advanced-account-creation.js  build.sh  deploy-gorbchain-manual.js  detailed-metadata-test.js  domain-operations.js  domain-registration-data.json  gorb-domain-registry.json  gorb-name-service.js  package.json  real-contract-test.js  run_tests.sh  test-metadata-functionality.js  test_metadata_url.js  transaction-history.js
sns-registrar-master (10)/program/src/: cpi.rs  entrypoint.rs  error.rs  instruction_auto.rs  lib.rs  processor.rs  state.rs  utils.rs
sns-registrar-master (10)/program/src/processor/: create.rs  create_reverse.rs  create_split_v2.rs  create_with_nft.rs  delete.rs  update_metadata.rs
