[package]
name = "sns-registrar"
version = "0.1.0"
authors = ["ellttBen <elliott@bonfida.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []
no-referrer-check = []
no-special-discount-fee = []
devnet = []

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
solana-program = "1.18.11"
num-traits = "0.2.14"
num-derive = "0.3.3"
borsh = "0.10.3"
thiserror = "1.0.24"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
spl-associated-token-account = "2.2.0"
bonfida-utils = "0.6.7"
spl-name-service = {version = "0.3.0", features = ["no-entrypoint"]}
mpl-token-metadata = { version = "4.0.0" }
unicode-segmentation = "1.10.1"
phf = { version = "0.10", features = ["macros"] }
solana-security-txt = "1.1.1"



[dev-dependencies]
solana-program-test =  "1.18.11"
tokio  = {version = "1.0", features = ["macros"]}
futures =  "0.3"
solana-sdk = "1.18.11"
spl-associated-token-account = "2.2.0"
random-string = "1.0.0"
bytemuck = "1.13.0"
serde = "1.0.198"
base64 = "0.22.0"
serde_json = "1.0.116"
bincode = "1.3.3"
pyth-solana-receiver-sdk = "0.3.0"

[lib]
crate-type = ["cdylib", "lib"]
